<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.scz.globallogic.presentation.pokemon.FRPickPokemonVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFrontImage"
                loadUrl="@{viewModel.pokemonForm.frontImage}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackImage"
                loadUrl="@{viewModel.pokemonForm.backImage}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            style="@style/PokemonHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.pokemonForm.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llImage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMovesStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() ->viewModel.onClickedMore()}"
            android:text="@string/pokemon_form_003"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/btnRandom">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:hint="@string/pokemon_form_001"
                android:maxLength="4"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{viewModel.inputId != -1}"
                android:onClick="@{() -> viewModel.onClickedPickPokemonWithId()}"
                android:text="@string/pokemon_form_004" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onClickedPickPokemon()}"
            android:text="@string/pokemon_form_005"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>