<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.scz.globallogic.presentation.history.FRPokemonHistoryVM" />

        <variable
            name="adapterHistory"
            type="com.scz.globallogic.presentation.HistoryAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/llLabels"
            showIfTrue="@{viewModel.pokemonHistory.size() != 0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                style="@style/PokemonLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pokemon_history_003" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/PokemonLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pokemon_history_004" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btnClear"
            app:layout_constraintTop_toBottomOf="@id/llLabels"
            app:rvAdapter="@{adapterHistory}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            showIfTrue="@{viewModel.pokemonHistory.size() != 0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onClickedClearHistory()}"
            android:text="Clear History"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            showIfTrue="@{viewModel.pokemonHistory.empty}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:src="@drawable/history_info" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/PokemonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/pokemon_history_002" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>